2009-11-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12467: TYPO3 Inline User Manual is broken

2009-11-25  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #12581: Use FILTER_FLAG_SCHEME_REQUIRED constant in t3lib_div::isValidUrl()

2009-11-24  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12581: Pagetree frame shows HTTP 404 error

2009-11-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12500: Object does not support method calls - PHP 5.3 (thanks to Dan Osipov)

2009-11-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12684: htmlArea RTE: Repeated character / backspacing is slow in Firefox

2009-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12677: htmlArea RTE: Incorrect cursor position after backspace/delete in Firefox

2009-11-17  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11937: Do not show PHP 5.3 E_DEPRECATED messages on productive systems

2009-11-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12622: htmlArea RTE: Incorrect behaviour of last item of list in gecko browsers

2009-11-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12597: htmlArea RTE: cursor position is not restored by undo/redo operations in Opera
	* Fixed bug #12421: htmlArea RTE: Paste is erratic in Opera 10 when server-based cleaning is enabled
	* Fixed bug #11362: htmlArea RTE: Cursor may not be put in list elements newly created in front of links
	* Updated htmlArea RTE version to 1.7.13

2009-11-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12324: Page tree will not be shown in the TYPO3 backend
	* Follow-up to bugfix #12324: Renamed sanitizeBackEndUrl() to sanitizeLocalUrl() in t3lib_div

2009-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12566: htmlArea RTE: Selecting element from status bar does not work in Safari
	* Fixed bug #12568: htmlArea RTE: Text pasted by Safari is wrapped in span or font tags

2009-11-10  Stanislas Rolland  <typo3@sjbr.ca>
