@@ -1,3 +1,7 @@
+2009-12-11  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #12782: htmlArea RTE: Editing a link title or target with Firefox 3 sometimes simply unlinks the link
+
 2009-11-20  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #12684: htmlArea RTE: Repeated character / backspacing is slow in Firefox
