@@ -1,3 +1,7 @@
+2009-12-11  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #12782: htmlArea RTE: Editing a link title or target with Firefox 3 sometimes simply unlinks the link
+
 2009-11-30  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #12467: TYPO3 Inline User Manual is broken
